--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
-logging.level.guru=debug
-server.port=8082
+server.port=8083
+spring.application.name=beer-inventory-service
+spring.sql.init.mode=EMBEDDED
+spring.cache.jcache.config=classpath:ehcache.xml
+spring.datasource.username=beer_inventory_service
+spring.datasource.password=Asdf!234
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/beerinventoryservice
+spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
